--- a/kubernetes/apps/data-platform/dask/ks.yaml
+++ b/kubernetes/apps/data-platform/dask/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app dask
-  namespace: &namespace ml-system
+  namespace: &namespace data-platform
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/ml-system/dask/app
+  path: ./kubernetes/apps/data-platform/dask/app
   prune: false
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app dask-cluster
-  namespace: &namespace ml-system
+  namespace: &namespace data-platform
 spec:
   commonMetadata:
     labels:
@@ -33,7 +33,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
   interval: 1h
-  path: ./kubernetes/apps/ml-system/dask/cluster
+  path: ./kubernetes/apps/data-platform/dask/cluster
   postBuild:
     substitute:
       APP: *app
