--- a/kubernetes/apps/data-platform/prefect/ks.yaml
+++ b/kubernetes/apps/data-platform/prefect/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app prefect
-  namespace: &namespace ml-system
+  namespace: &namespace data-platform
 spec:
   commonMetadata:
     labels:
@@ -15,7 +15,7 @@ spec:
     - name: cloudnative-pg-cluster
       namespace: database
   interval: 1h
-  path: ./kubernetes/apps/ml-system/prefect/app
+  path: ./kubernetes/apps/data-platform/prefect/app
   postBuild:
     substitute:
       APP: *app
@@ -33,7 +33,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app prefect-workers
-  namespace: &namespace ml-system
+  namespace: &namespace data-platform
 spec:
   commonMetadata:
     labels:
@@ -42,7 +42,7 @@ spec:
     - name: prefect
       namespace: ml-system
   interval: 1h
-  path: ./kubernetes/apps/ml-system/prefect/workers
+  path: ./kubernetes/apps/data-platform/prefect/workers
   prune: false
   sourceRef:
     kind: GitRepository
