--- a/kubernetes/apps/data-platform/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/prefect/workers/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    namespaceOverride: ml-system
+    namespaceOverride: data-platform
     worker:
       image:
         repository: prefecthq/prefect
