--- a/kubernetes/apps/istio-system/cluster-local-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/cluster-local-gateway/app/helmrelease.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: istio
-  namespace: kubeflow
+  name: istio-cluster-local-gateway
+  namespace: istio-system
 spec:
   interval: 12h
   url: https://istio-release.storage.googleapis.com/charts
@@ -13,17 +13,17 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: istio
+  name: cluster-local-gateway
 spec:
   interval: 1h
   chart:
     spec:
-      chart: base
+      chart: gateway
       version: 1.20.2
       sourceRef:
         kind: HelmRepository
-        name: istio
-        namespace: kubeflow
+        name: istio-cluster-local-gateway
+        namespace: istio-system
   install:
     remediation:
       retries: 3
@@ -33,5 +33,5 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    global:
-      istioNamespace: kubeflow
+    service:
+      type: ClusterIP
