--- a/kubernetes/apps/istio-system/ingress-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/ingress-gateway/app/helmrelease.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: istio
-  namespace: kubeflow
+  name: istio-ingress-gateway
+  namespace: istio-system
 spec:
   interval: 12h
   url: https://istio-release.storage.googleapis.com/charts
@@ -22,8 +22,8 @@ spec:
       version: 1.20.2
       sourceRef:
         kind: HelmRepository
-        name: istio
-        namespace: kubeflow
+        name: istio-ingress-gateway
+        namespace: istio-system
   install:
     remediation:
       retries: 3
