--- a/kubernetes/apps/istio-system/istio/ks.yaml
+++ b/kubernetes/apps/istio-system/istio/ks.yaml
@@ -3,14 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kafka
-  namespace: &namespace ml-system
+  name: &app istio
+  namespace: &namespace istio-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/ml-system/kafka/app
+  path: ./kubernetes/apps/istio-system/istio/app
   prune: false
   sourceRef:
     kind: GitRepository
