--- a/kubernetes/apps/kubeflow/feast/ks.yaml
+++ b/kubernetes/apps/kubeflow/feast/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app feast
-  namespace: &namespace ml-system
+  namespace: &namespace kubeflow
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/ml-system/feast/app
+  path: ./kubernetes/apps/kubeflow/feast/app
   prune: false
   sourceRef:
     kind: GitRepository
