--- a/kubernetes/apps/kubeflow/kuberay/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kuberay/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: kuberay
-  namespace: ml-system
+  namespace: kubeflow
 spec:
   interval: 12h
   url: https://ray-project.github.io/kuberay-helm/
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: kuberay
-        namespace: ml-system
+        namespace: kubeflow
   install:
     remediation:
       retries: 3
