--- a/kubernetes/apps/kubeflow/mlflow/ks.yaml
+++ b/kubernetes/apps/kubeflow/mlflow/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app mlflow
-  namespace: &namespace ml-system
+  namespace: &namespace kubeflow
 spec:
   commonMetadata:
     labels:
@@ -20,7 +20,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   interval: 1h
-  path: ./kubernetes/apps/ml-system/mlflow/app
+  path: ./kubernetes/apps/kubeflow/mlflow/app
   prune: false
   postBuild:
     substitute:
