--- a/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: airflow
-  namespace: ml-system
+  namespace: data-platform
 spec:
   interval: 12h
   url: https://airflow.apache.org
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: airflow
-        namespace: ml-system
+        namespace: data-platform
   install:
     remediation:
       retries: 3
