--- a/kubernetes/apps/data-platform/prefect/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/prefect/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: prefect
-  namespace: ml-system
+  namespace: data-platform
 spec:
   interval: 12h
   url: https://prefecthq.github.io/prefect-helm
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: prefect
-        namespace: ml-system
+        namespace: data-platform
   install:
     remediation:
       retries: 3
