chore: add app-template

--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: kubeflow
 components:
   - ../../components/common
+  - ../../components/repos/app-template
 resources:
   - ./dex/ks.yaml
   - ./metacontroller/ks.yaml
