--- a/kubernetes/apps/kubeflow/metacontroller/ks.yaml
+++ b/kubernetes/apps/kubeflow/metacontroller/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: istio-cluster-local-gateway
-      namespace: kubeflow
+      namespace: istio-system
   interval: 1h
   path: ./kubernetes/apps/kubeflow/metacontroller/app
   prune: false
