--- a/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: kserve
+  name: kserve-crd
 spec:
   interval: 1h
   type: oci
-  url: oci://ghcr.io/kserve/charts
+  url: oci://ghcr.io/kserve/charts/kserve-crd
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -22,7 +22,7 @@ spec:
       version: 0.12.1
       sourceRef:
         kind: HelmRepository
-        name: kserve
+        name: kserve-crd
         namespace: kubeflow
   install:
     remediation:
