fix: only apply label on kubeflow namespace

--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -17,3 +17,7 @@ resources:
   - ./feast/ks.yaml
   - ./kuberay/ks.yaml
   - ./mlflow/ks.yaml
+patches:
+- op: add
+  path: /metadata/labels/istio-injection
+  value: enabled
