fix(airflow): add secret key

--- a/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         INIT_POSTGRES_PASS: "{{ .AIRFLOW_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         connection: "postgresql://{{ .AIRFLOW_POSTGRES_USER }}:{{ .AIRFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/airflow"
+        webserver-secret-key: "{{ .AIRFLOW_WEBSERVER_SECRET_KEY }}"
         S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
