fix: namespace ml-system -> data-platform

--- a/kubernetes/apps/data-platform/prefect/app/httproute.yaml
+++ b/kubernetes/apps/data-platform/prefect/app/httproute.yaml
@@ -13,5 +13,5 @@ spec:
   rules:
     - backendRefs:
         - name: prefect-server
-          namespace: ml-system
+          namespace: data-platform
           port: 4200
