--- a/kubernetes/apps/data-platform/airflow/app/httproute.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/httproute.yaml
@@ -3,15 +3,15 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: dask
+  name: airflow
 spec:
-  hostnames: ["dask.goyangi.cloud"]
+  hostnames: ["airflow.goyangi.cloud"]
   parentRefs:
     - name: internal
       namespace: kube-system
       sectionName: https
   rules:
     - backendRefs:
-        - name: dask-cluster
+        - name: airflow-webserver
           namespace: data-platform
-          port: 8787
+          port: 8080
