--- a/kubernetes/apps/data-platform/airflow/ks.yaml
+++ b/kubernetes/apps/data-platform/airflow/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/guarded
   interval: 1h
   path: ./kubernetes/apps/data-platform/airflow/app
   prune: false
