--- a/kubernetes/apps/data-platform/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/prefect/workers/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: prefect
-        namespace: ml-system
+        namespace: data-platform
   install:
     remediation:
       retries: 3
@@ -37,7 +37,7 @@ spec:
         installPolicy: always
       apiConfig: selfHostedServer
       selfHostedServerApiConfig:
-        apiUrl: http://prefect-server.ml-system.svc.cluster.local:4200/api
+        apiUrl: http://prefect-server.data-platform.svc.cluster.local:4200/api
       replicaCount: 1
       resources:
         requests:
