--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
   - ../../components/repos/app-template
 resources:
+  - ./namespace.yaml
   - ./dex/ks.yaml
   - ./metacontroller/ks.yaml
   - ./argo-workflows/ks.yaml
@@ -17,11 +18,3 @@ resources:
   - ./feast/ks.yaml
   - ./kuberay/ks.yaml
   - ./mlflow/ks.yaml
-patchesStrategicMerge:
-  - |
-    apiVersion: v1
-    kind: Namespace
-    metadata:
-      name: kubeflow
-      labels:
-        istio-injection: enabled
