--- a/kubernetes/apps/dex/dex/app/helmrelease.yaml
+++ b/kubernetes/apps/dex/dex/app/helmrelease.yaml
@@ -3,27 +3,27 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: knative-operator
-  namespace: kubeflow
+  name: dex
+  namespace: dex
 spec:
   interval: 12h
-  url: https://raw.githubusercontent.com/kromanow94/knative-operator/main
+  url: https://charts.dexidp.io
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: knative-operator
+  name: dex
 spec:
   interval: 1h
   chart:
     spec:
-      chart: knative-operator
-      version: v1.15.4
+      chart: dex
+      version: 0.22.1
       sourceRef:
         kind: HelmRepository
-        name: knative-operator
-        namespace: kubeflow
+        name: dex
+        namespace: dex
   install:
     remediation:
       retries: 3
@@ -32,3 +32,10 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  values:
+    fullnameOverride: dex
+    envFrom:
+      - secretRef:
+          name: dex-secret
+    configSecret:
+      name: dex-secret
