--- a/kubernetes/apps/dex/dex/ks.yaml
+++ b/kubernetes/apps/dex/dex/ks.yaml
@@ -3,28 +3,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app mlflow
-  namespace: &namespace kubeflow
+  name: &app dex
+  namespace: &namespace dex
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  components:
-    - ../../../../components/gatus/guarded
-    - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
-    - name: volsync
-      namespace: volsync-system
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/mlflow/app
+  path: ./kubernetes/apps/dex/dex/app
   prune: false
-  postBuild:
-    substitute:
-      APP: *app
   sourceRef:
     kind: GitRepository
     name: flux-system
