--- a/kubernetes/apps/dex/kustomization.yaml
+++ b/kubernetes/apps/dex/kustomization.yaml
@@ -2,10 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kubeflow
+namespace: dex
 components:
   - ../../components/common
 resources:
-  - ./metacontroller/ks.yaml
-  - ./argo-workflows/ks.yaml
-  - ./kubeflow/ks.yaml
+  - ./dex/ks.yaml
