--- a/kubernetes/apps/knative/knative/app/helmrelease.yaml
+++ b/kubernetes/apps/knative/knative/app/helmrelease.yaml
@@ -3,27 +3,27 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: dex
-  namespace: kubeflow
+  name: knative-operator
+  namespace: knative
 spec:
   interval: 12h
-  url: https://charts.dexidp.io
+  url: https://raw.githubusercontent.com/kromanow94/knative-operator/main
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: dex
+  name: knative-operator
 spec:
   interval: 1h
   chart:
     spec:
-      chart: dex
-      version: 0.22.1
+      chart: knative-operator
+      version: v1.15.4
       sourceRef:
         kind: HelmRepository
-        name: dex
-        namespace: kubeflow
+        name: knative-operator
+        namespace: knative
   install:
     remediation:
       retries: 3
@@ -32,10 +32,3 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  values:
-    fullnameOverride: dex
-    envFrom:
-      - secretRef:
-          name: dex-secret
-    configSecret:
-      name: dex-secret
