--- a/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: kserve-crd
-  namespace: kubeflow
+  namespace: kserve
 spec:
   interval: 1h
   type: oci
@@ -24,7 +24,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: kserve-crd
-        namespace: kubeflow
+        namespace: kserve
   install:
     remediation:
       retries: 3
