--- a/kubernetes/apps/kserve/kserve/ks.yaml
+++ b/kubernetes/apps/kserve/kserve/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app kserve-crds
-  namespace: &namespace kubeflow
+  namespace: &namespace kserve
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/kserve/crds
+  path: ./kubernetes/apps/kserve/kserve/crds
   prune: false
   sourceRef:
     kind: GitRepository
@@ -25,18 +25,18 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app kserve
-  namespace: &namespace kubeflow
+  namespace: &namespace kserve
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: kserve-crds
-      namespace: kubeflow
-    - name: kubeflow
-      namespace: kubeflow
+      namespace: kserve
+    - name: kserve
+      namespace: kserve
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/kserve/app
+  path: ./kubernetes/apps/kserve/kserve/app
   prune: false
   sourceRef:
     kind: GitRepository
