--- a/kubernetes/apps/machine-learning/feast/ks.yaml
+++ b/kubernetes/apps/machine-learning/feast/ks.yaml
@@ -3,17 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app knative
-  namespace: &namespace kubeflow
+  name: &app feast
+  namespace: &namespace machine-learning
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: oauth2-proxy
-      namespace: kubeflow
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/knative/app
+  path: ./kubernetes/apps/machine-learning/feast/app
   prune: false
   sourceRef:
     kind: GitRepository
