--- a/kubernetes/apps/machine-learning/kuberay/ks.yaml
+++ b/kubernetes/apps/machine-learning/kuberay/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app kuberay
-  namespace: &namespace kubeflow
+  namespace: &namespace machine-learning
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/kuberay/app
+  path: ./kubernetes/apps/machine-learning/kuberay/app
   prune: false
   sourceRef:
     kind: GitRepository
