--- a/kubernetes/apps/machine-learning/kustomization.yaml
+++ b/kubernetes/apps/machine-learning/kustomization.yaml
@@ -2,10 +2,11 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kubeflow
+namespace: machine-learning
 components:
   - ../../components/common
+  - ../../components/repos/app-template
 resources:
-  - ./metacontroller/ks.yaml
-  - ./argo-workflows/ks.yaml
-  - ./kubeflow/ks.yaml
+  - ./feast/ks.yaml
+  - ./kuberay/ks.yaml
+  - ./mlflow/ks.yaml
