--- a/kubernetes/apps/machine-learning/mlflow/ks.yaml
+++ b/kubernetes/apps/machine-learning/mlflow/ks.yaml
@@ -3,18 +3,28 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app dex
-  namespace: &namespace kubeflow
+  name: &app mlflow
+  namespace: &namespace machine-learning
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/guarded
+    - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
+    - name: volsync
+      namespace: volsync-system
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/dex/app
+  path: ./kubernetes/apps/machine-learning/mlflow/app
   prune: false
+  postBuild:
+    substitute:
+      APP: *app
   sourceRef:
     kind: GitRepository
     name: flux-system
