--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
@@ -1,11 +1,6 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kubeflow
-components:
-  - ../../components/common
 resources:
-  - ./metacontroller/ks.yaml
-  - ./argo-workflows/ks.yaml
-  - ./kubeflow/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
