--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/ks.yaml
@@ -4,16 +4,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app oauth2-proxy
-  namespace: &namespace kubeflow
+  namespace: &namespace oauth2-proxy
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: dex
-      namespace: kubeflow
+      namespace: dex
   interval: 1h
-  path: ./kubernetes/apps/kubeflow/oauth2-proxy/app
+  path: ./kubernetes/apps/oauth2-proxy/oauth2-proxy/app
   prune: false
   sourceRef:
     kind: GitRepository
