--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
     name: oauth2-proxy-secret
     template:
       data:
-        clientID: kubeflow-oidc-authservice
+        client-id: kubeflow-oidc-authservice
         clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
         cookieSecret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
   dataFrom:
