--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     template:
       data:
         client-id: kubeflow-oidc-authservice
-        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
-        cookieSecret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
+        client-secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        cookie-secret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
