--- a/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
@@ -1,13 +1,13 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: kserve-crd
-  namespace: kserve
 spec:
   interval: 1h
-  type: oci
+  ref:
+    tag: v0.14.1
   url: oci://ghcr.io/kserve/charts/kserve-crd
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
@@ -17,14 +17,9 @@ metadata:
   name: kserve-crd
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: kserve-crd
-      version: 0.12.1
-      sourceRef:
-        kind: HelmRepository
-        name: kserve-crd
-        namespace: kserve
+  chartRef:
+    kind: OCIRepository
+    name: kserve-crd
   install:
     remediation:
       retries: 3
