--- a/kubernetes/apps/kserve/kserve/app/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/app/helmrelease.yaml
@@ -1,4 +1,3 @@
-
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
@@ -7,9 +6,14 @@ metadata:
   name: kserve
 spec:
   interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
   ref:
-    tag: v0.14.1
+    tag: 0.14.1
   url: oci://ghcr.io/kserve/charts/kserve
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
