--- a/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
@@ -6,9 +6,14 @@ metadata:
   name: kserve-crd
 spec:
   interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
   ref:
-    tag: v0.14.1
+    tag: 0.14.1
   url: oci://ghcr.io/kserve/charts/kserve-crd
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
