--- a/kubernetes/apps/kubeflow/metacontroller/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/metacontroller/app/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: metacontroller
-  namespace: kubeflow
 spec:
-  type: oci
-  interval: 12h
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 2.6.1
   url: oci://ghcr.io/metacontroller/metacontroller-helm
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: metacontroller
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: metacontroller
-      version: 2.6.1
-      sourceRef:
-        kind: HelmRepository
-        name: metacontroller
-        namespace: kubeflow
+  chartRef:
+    kind: OCIRepository
+    name: metacontroller
   install:
     remediation:
       retries: 3
