--- a/kubernetes/apps/kubeflow/kubeflow/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kubeflow/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
   interval: 1h
   chart:
     spec:
-      chart: kubeflow
+      chart: ./charts/kubeflow
       version: 0.4.0
       sourceRef:
         kind: GitRepository
