--- a/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/crds/helmrelease.yaml
@@ -1,19 +1,14 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
 metadata:
   name: kserve-crd
+  namespace: kserve
 spec:
   interval: 1h
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 0.14.1
-  url: oci://ghcr.io/kserve/charts/kserve-crd
-  verify:
-    provider: cosign
+  type: oci
+  url: oci://ghcr.io/kserve/charts/
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -22,9 +17,14 @@ metadata:
   name: kserve-crd
 spec:
   interval: 1h
-  chartRef:
-    kind: OCIRepository
-    name: kserve-crd
+  chart:
+    spec:
+      chart: kserve-crd
+      version: 0.12.1
+      sourceRef:
+        kind: HelmRepository
+        name: kserve-crd
+        namespace: kserve
   install:
     remediation:
       retries: 3
