--- a/kubernetes/apps/kubeflow/metacontroller/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/metacontroller/app/helmrelease.yaml
@@ -1,19 +1,14 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
 metadata:
   name: metacontroller
+  namespace: kubeflow
 spec:
-  interval: 1h
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 2.6.1
-  url: oci://ghcr.io/metacontroller/metacontroller-helm
-  verify:
-    provider: cosign
+  type: oci
+  interval: 12h
+  url: oci://ghcr.io/metacontroller/
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -22,9 +17,14 @@ metadata:
   name: metacontroller
 spec:
   interval: 1h
-  chartRef:
-    kind: OCIRepository
-    name: metacontroller
+  chart:
+    spec:
+      chart: metacontroller-helm
+      version: 4.11.24
+      sourceRef:
+        kind: HelmRepository
+        name: metacontroller
+        namespace: kubeflow
   install:
     remediation:
       retries: 3
