--- a/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
@@ -52,4 +52,4 @@ spec:
           - authorization
           - cookie
           port: 80
-          service: oauth2-proxy.kubeflow.svc.cluster.local
+          service: oauth2-proxy.oauth2-proxy.svc.cluster.local
