--- a/kubernetes/apps/data-platform/airflow/ks.yaml
+++ b/kubernetes/apps/data-platform/airflow/ks.yaml
@@ -13,6 +13,9 @@ spec:
     - ../../../../components/gatus/guarded
   interval: 1h
   path: ./kubernetes/apps/data-platform/airflow/app
+  postBuild:
+    substitute:
+      APP: *app
   prune: false
   sourceRef:
     kind: GitRepository
