--- a/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
@@ -19,6 +19,8 @@ spec:
   values:
     controllers:
       calibre-web:
+        annotations:
+          reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
