--- a/kubernetes/apps/kubeflow/argo-workflows/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/app/helmrelease.yaml
@@ -44,17 +44,17 @@ spec:
           connMaxLifetime: 0s
           maxIdleConns: 100
           maxOpenConns: 0
-        postgresql:
-          host: postgres17-rw.database.cluster.local
-          port: 5432
-          database: postgres
+        mysql:
+          host: mysql.database.cluster.local
+          port: 3306
+          database: argo
           tableName: argo_workflows
           userNameSecret:
             name: argo-workflows-secret
-            key: ARGO_WORKFLOWS_POSTGRES_USER
+            key: MYSQL_USER
           passwordSecret:
             name: argo-workflows-secret
-            key: ARGO_WORKFLOWS_POSTGRES_PASSWORD
+            key: MYSQL_PASSWORD
           ssl: false
           sslMode: disable
         nodeStatusOffLoad: true
