feat: yeet helm kubeflow
* not mature enough yet

--- a/kubernetes/apps/database/mysql/app/externalsecret.yaml
+++ b/kubernetes/apps/database/mysql/app/externalsecret.yaml
@@ -2,24 +2,19 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: argo-workflows
+  name: mysql
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: argo-workflows-secret
+    name: mysql-secret
     template:
       data:
-        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        MYSQL_USER: root
+        MYSQL_ROOT_PASSWORD: "{{ .MYSQL_ROOT_PASSWORD }}"
+        MYSQL_DATABASE: kubeflow
+        MYSQL_USER: kubeflow
         MYSQL_PASSWORD: "{{ .MYSQL_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
-        key: cloudnative-pg
-    - extract:
         key: kubeflow
-    - extract:
-        key: minio
-
