--- a/kubernetes/apps/database/mysql/app/gatus.yaml
+++ b/kubernetes/apps/database/mysql/app/gatus.yaml
@@ -7,9 +7,9 @@ metadata:
 data:
   config.yaml: |
     endpoints:
-      - name: mysql-kubeflow
+      - name: mysql
         group: infrastructure
-        url: tcp://mysql-kubeflow.database.svc.cluster.local:3306
+        url: tcp://mysql.database.svc.cluster.local:3306
         interval: 1m
         ui:
           hide-url: true
