--- a/kubernetes/apps/database/mysql/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mysql/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app mysql-kubeflow
+  name: &app mysql
 spec:
   interval: 1h
   chartRef:
@@ -22,7 +22,6 @@ spec:
       mysql:
         annotations:
           reloader.stakater.com/auto: "true"
-          external-dns.alpha.kubernetes.io/target: "mysql.kubeflow.goyangi.cloud"
         containers:
           app:
             image:
@@ -30,7 +29,7 @@ spec:
               tag: 11.4.5
             envFrom:
               - secretRef:
-                  name: mysql-kubeflow-secret
+                  name: mysql-secret
             resources:
               requests:
                 cpu: 10m
@@ -42,6 +41,7 @@ spec:
         controller: mysql
         type: LoadBalancer
         annotations:
+          external-dns.alpha.kubernetes.io/target: "mysql.goyangi.cloud"
           lbipam.cilium.io/ips: 192.168.1.132, ::ffff:192.168.1.132
         ports:
           mysql:
