--- a/kubernetes/apps/database/mysql/ks.yaml
+++ b/kubernetes/apps/database/mysql/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app mysql-kubeflow
+  name: &app mysql
   namespace: &namespace database
 spec:
   commonMetadata:
@@ -17,7 +17,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   interval: 1h
-  path: ./kubernetes/apps/database/mysql/kubeflow
+  path: ./kubernetes/apps/database/mysql/app
   postBuild:
     substitute:
       APP: *app
