--- a/kubernetes/apps/kube-system/cilium/app/networks.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networks.yaml
@@ -21,28 +21,28 @@ spec:
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/cilium.io/ciliumbgppeeringpolicy_v2alpha1.json
-# apiVersion: cilium.io/v2alpha1
-# kind: CiliumBGPPeeringPolicy
-# metadata:
-#   name: l3-policy
-# spec:
-#   nodeSelector:
-#     matchLabels:
-#       kubernetes.io/os: linux
-#   virtualRouters:
-#     - localASN: 64514
-#       exportPodCIDR: false
-#       serviceSelector:
-#         matchExpressions:
-#           - key: thisFakeSelector
-#             operator: NotIn
-#             values:
-#               - will-match-and-announce-all-services
-#       neighbors:
-#         - peerAddress: 192.168.1.1/32
-#           peerASN: 64513
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/cilium.io/ciliumbgppeeringpolicy_v2alpha1.json
+apiVersion: cilium.io/v2alpha1
+kind: CiliumBGPPeeringPolicy
+metadata:
+  name: l3-policy
+spec:
+  nodeSelector:
+    matchLabels:
+      kubernetes.io/os: linux
+  virtualRouters:
+    - localASN: 64514
+      exportPodCIDR: false
+      serviceSelector:
+        matchExpressions:
+          - key: thisFakeSelector
+            operator: NotIn
+            values:
+              - will-match-and-announce-all-services
+      neighbors:
+        - peerAddress: 192.168.1.1/32
+          peerASN: 64513
 ---
 apiVersion: v1
 kind: Service
