--- a/kubernetes/apps/argocd/externalsecret.yaml
+++ b/kubernetes/apps/argocd/externalsecret.yaml
@@ -11,8 +11,9 @@ spec:
   target:
     name: argocd-repository--home-ops
     template:
-      labels:
-        argocd.argoproj.io/secret-type: repository
+      metadata:
+        labels:
+          argocd.argoproj.io/secret-type: repository
       type: git
       data:
         url: https://github.com/solanyn/home-ops.git
