--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -24,8 +24,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/solanyn/plex
-              tag: 1.41.5.9522@sha256:2223333b6a76b2c094c5b30ccb89128501005f838bceaa6e2f291db0f17c3b9f
+              repository: ghcr.io/home-operations/plex
+              tag: 1.41.5.9522@sha256:1c35e44828531320f4fccd980da5a3d0da08a438f1c89841d8be97cfefe66e63
             env:
               TZ: Australia/Sydney
               PLEX_ADVERTISE_URL: https://plex.goyangi.cloud:443,http://192.168.1.128:32400
