--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -25,8 +25,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/solanyn/qbittorrent
-              tag: 5.0.4@sha256:1d7728d250f2f94aae614af0df6c98da7b9491b21d28c7fe1a5ec87f0b1b4fde
+              repository: ghcr.io/home-operations/qbittorrent
+              tag: 5.0.4@sha256:2b94ecf499c4d4634e54e2d2dc2b2ffbb2b6989b5fa0ee03ab9f7823dd74fc70
             env:
               TZ: Australia/Sydney
               QBT_WEBUI_PORT: &port 80
