--- a/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/solanyn/readarr
+              repository: ghcr.io/home-operations/readarr
               tag: 0.4.12.2753@sha256:580a12d57fb233a05cb74ba2862024d564c4b0d0c7f75f25e66cf7fe0b66ff1e
             env:
               # NOTE: Environment variables only work because onedr0p containers do some cool things to turn ENV variables to config.xml
