--- a/kubernetes/apps/argocd/argocd/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/argocd/app/kustomization.yaml
@@ -2,8 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd
-components:
-  - ../../components/common
 resources:
-  - ./argocd/ks.yaml
+  - ./github.com/deployKF/deployKF/argocd-plugin/argocd-install/?ref=main
