--- a/kubernetes/apps/argocd/argocd/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/argocd/app/kustomization.yaml
@@ -4,3 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - github.com/deployKF/deployKF/argocd-plugin/argocd-install/?ref=main
+  - ./httproute.yaml
