feat: add deploykf

--- a/kubernetes/apps/argocd/deploykf/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/deploykf/app/kustomization.yaml
@@ -2,9 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd
-components:
-  - ../../components/common
 resources:
-  - ./argocd/ks.yaml
-  - ./deploykf/ks.yaml
+  - ./deploykf-app-of-apps.yaml
