chore(yaskfiles): add deploykf sync

--- a/.taskfiles/workstation/resources/Brewfile
+++ b/.taskfiles/workstation/resources/Brewfile
@@ -2,6 +2,8 @@ tap "fluxcd/tap"
 tap "go-task/tap"
 tap "siderolabs/tap"
 brew "age"
+brew "argocd"
+brew "bash"
 brew "cloudflared"
 brew "fluxcd/tap/flux"
 brew "gh"
