--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -24,6 +24,7 @@ env:
 includes:
   b: .taskfiles/bootstrap
   c: .taskfiles/cnpg
+  kf: .taskfiles/deploykf
   k: .taskfiles/kubernetes
   s: .taskfiles/sops
   t: .taskfiles/talos
