--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster17.yaml
@@ -9,7 +9,7 @@ spec:
   primaryUpdateStrategy: unsupervised
   storage:
     size: 20Gi
-    storageClass: ceph-block
+    storageClass: openebs-hostpath
   superuserSecret:
     name: cloudnative-pg-secret
   enableSuperuserAccess: true
