--- a/kubernetes/apps/database/mariadb/cluster/backup.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/backup.yaml
@@ -6,7 +6,7 @@ metadata:
   name: backup
 spec:
   mariaDbRef:
-    name: mariadb-galera
+    name: mariadb
   schedule:
     cron: "*/1 * * * *"
     suspend: false
