chore: update secret names

--- a/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     name: mariadb-secret
     template:
       data:
-        MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        MINIO_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        MINIO_ROOT_USER: "{{ .MINIO_ROOT_USER }}"
+        MINIO_ROOT_PASSWORD: "{{ .MINIO_ROOT_PASSWORD }}"
         MARIADB_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
