--- a/kubernetes/apps/database/mariadb/cluster/backup.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/backup.yaml
@@ -17,8 +17,8 @@ spec:
       endpoint: minio.default.svc.cluster.local:9000
       region: us-east-1
       accessKeyIdSecretKeyRef:
-        name: minio
-        key: MINIO_ACCESS_KEY_ID
+        name: mariadb-secret
+        key: MINIO_ROOT_USER
       secretAccessKeySecretKeyRef:
-        name: minio
-        key: MINIO_SECRET_ACCESS_KEY
+        name: mariadb-secret
+        key: MINIO_ROOT_PASSWORD
