fix: httproute parentrefs

--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -85,6 +85,7 @@ spec:
         hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
         parentRefs:
           - name: internal
+            namespace: kube-system
             sectionName: https
         rules:
           - backendRefs:
