--- a/kubernetes/apps/database/mariadb/cluster/databases/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/databases/kubeflow/kustomization.yaml
@@ -3,8 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./externalsecret.yaml
-  - ./backup.yaml
-  - ./mariadb.yaml
-  - ./gatus.yaml
-  - ./databases/
+  - ./user.yaml
+  - ./grant.yaml
+  - ./database.yaml
