--- a/kubernetes/apps/database/mariadb/cluster/databases/kustomization.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/databases/kustomization.yaml
@@ -3,8 +3,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./externalsecret.yaml
-  - ./backup.yaml
-  - ./mariadb.yaml
-  - ./gatus.yaml
-  - ./databases/
+  - ./kubeflow/
