chore: add secret value

--- a/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
@@ -15,8 +15,11 @@ spec:
         MINIO_ROOT_USER: "{{ .MINIO_ROOT_USER }}"
         MINIO_ROOT_PASSWORD: "{{ .MINIO_ROOT_PASSWORD }}"
         MARIADB_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
+        MARIADB_KUBEFLOW_PASSWORD: " {{ .MARIADB_KUBEFLOW_PASSWORD }}"
   dataFrom:
     - extract:
         key: minio
     - extract:
         key: mariadb
+    - extract:
+        key: kubeflow
