--- a/kubernetes/apps/default/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/atuin/app/helmrelease.yaml
@@ -68,9 +68,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
-          - "sh.goyangi.cloud"
+        hostnames: ["sh.goyangi.cloud"]
         parentRefs:
           - name: internal
             namespace: kube-system
