--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -79,9 +79,7 @@ spec:
             port: 12321
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
-          - hass.goyangi.cloud
+        hostnames: ["hass.goyangi.cloud"]
         parentRefs:
           - name: internal
             namespace: kube-system
