--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -79,8 +79,7 @@ spec:
             port: &port 32400
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
+        hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
         parentRefs:
           - name: external
             namespace: kube-system
