--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -104,9 +104,7 @@ spec:
             protocol: TCP
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
-          - qb.goyangi.cloud
+        hostnames: ["qb.goyangi.cloud"]
         parentRefs:
           - name: internal
             namespace: kube-system
