--- a/kubernetes/apps/network/echo/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo/app/helmrelease.yaml
@@ -71,8 +71,7 @@ spec:
           - port: http
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.goyangi.cloud"
+        hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
         parentRefs:
           - name: external
             namespace: kube-system
