chore: add attest step to image pull workflow for home-operations

--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -100,6 +100,16 @@ jobs:
       max-parallel: 4
       fail-fast: false
     steps:
+      - name: Attest
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          case "${{ matrix.images }}" in
+            *home-operations*)
+              gh attestation verify --owner home-operations oci://${{ matrix.images }}
+              ;;
+          esac
+
       - name: Install talosctl
         run: curl -fsSL https://talos.dev/install | sh
 
