chore: update namespaces

--- a/kubernetes/apps/kubeflow/ks.yaml
+++ b/kubernetes/apps/kubeflow/ks.yaml
@@ -12,6 +12,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: kubeflow-manifests
-    namespace: kubeflow
+    namespace: flux-system
   timeout: 5m
   wait: true
